# centsible

./: .gitignore  BankAdd.cpp  BankAdd.h  BankAdd.ui  BankDelete.cpp  BankDelete.h  BankDelete.ui  CMakeLists.txt  InvestmentAdd.cpp  InvestmentAdd.h  InvestmentAdd.ui  InvestmentDelete.cpp  InvestmentDelete.h  InvestmentDelete.ui  README.md  bankstats.cpp  bankstats.h  bankstats.ui  bugfix.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mongoloid.cpp  mongoloid.h
mongo/: deletionHandler.py  mongo_get_bank.py  mongo_get_investments.py  mongo_send_banks.py  mongo_send_investments.py
mongo/db_input/: bank_records.txt  banks.txt  investment_records.txt  investments.txt
